--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "build": "npm install && npm run build-assets",
+    "build-assets": "gulp build || webpack --config webpack.config.js"
   },
   "author": "vedant",
   "license": "ISC",
